# Rust-GraphQL-API-Server

./: Cargo.toml  README.md
src/: main.rs
src/schema/: health.rs  mod.rs
src/server/: mod.rs  routes.rs
