[package]
name = "graphql-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Logging
log = "0.4.17"
pretty_env_logger = "0.4.0"

# Async
tokio = { version = "1.19.2", features = ["full"] }

# GraphQL
async-graphql = "4.0.16"
async-graphql-warp = "4.0.4"

# Serialization
serde_json = "1.0.82"

# Web
warp = "0.3.2"